--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   get:
   http:
   flutter_native_splash: ^2.2.13
+  flutter_svg: ^1.1.6
+  salomon_bottom_bar: ^3.3.1
 
 dev_dependencies:
   flutter_test:
