add: [MW] add Detail Page

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   salomon_bottom_bar: ^3.3.1
   group_list_view: ^1.1.1
   carousel_slider: ^4.1.1
+  readmore: ^2.2.0
 
 dev_dependencies:
   flutter_test:
